// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Container (Vue) > Snapshots > should match snapshot for custom container 1`] = `
<div
  class="w-full max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8"
>
  <div>
    Container content
  </div>
</div>
`;

exports[`Container (Vue) > Snapshots > should match snapshot for default container 1`] = `
<div
  class="w-full mx-auto px-4 sm:px-6 lg:px-8"
>
  <div>
    Container content
  </div>
</div>
`;
